# Cmake 最低版本
CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

# 项目名称
PROJECT(DS C)
SET(CMAKE_BUILD_TYPE Release)

# 添加DEBUG宏定义
ADD_DEFINITIONS(-DDEBUG -D_GNU_SOURCE -DLINUX)

ADD_SUBDIRECTORY(sequence_list)

ADD_SUBDIRECTORY(linked_list)

ADD_SUBDIRECTORY(stack)

ADD_SUBDIRECTORY(queue)

ADD_SUBDIRECTORY(tree)

ADD_SUBDIRECTORY(sort)